# quteCAD

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/geometry/: Line.cpp  Line.h  LineEntity.cpp  LineEntity.h
src/graphics/: GraphicsScene.cpp  GraphicsScene.h  GraphicsView.cpp  GraphicsView.h  ItemFactory.cpp  ItemFactory.h  LineItem.cpp  LineItem.h
src/graphics/items/: ActiveNode.cpp  ActiveNode.h  BaseItem.cpp  BaseItem.h  ItemTypes.h  LineItem.cpp  LineItem.h  NodeItem.cpp  NodeItem.h
src/ui/: mainwindow.cpp  mainwindow.h
src/utils/: common.h
tests/: CMakeLists.txt
tests/geometry/: test_line.cpp
tests/utils/: test_common.cpp
